2011-01-10  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2011-01-10  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.38.0 release.

2011-01-10  kitone  <kitone@gna.org>

	* plugins/actions/sortsubtitles/sortsubtitles.cc:
	* src/subtitles.cc:
	* src/subtitles.h:
	Rewrite sort subtitles. Speed improvements.

2010-12-22  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	Clean code.

2010-12-06  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #17231 : Opening SEP project wont open a Keyframes file automatically.

2010-11-10  kitone  <kitone@gna.org>

	* plugins/actions/adjusttime/adjusttime.cc:
	Fix English errors patch by Pavel Dvořák.

2010-11-05  kitone  <kitone@gna.org>

	* src/subtitlemodel.cc:
	* src/subtitlemodel.h:
	* src/subtitles.cc:
	* src/subtitles.h:
	Fix bug #17000 : Subtitles in MicroDVD format don't display correct.
	SubtitleModel::find doesn't work if the document is frame based.
	Remove unused function find_in_or_after. 
	Clean code.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/subtitleformats/microdvd/microdvd.cc:
	Fix bug #16898 : Feature request - movie fps detecting.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16917 : scale option doesn't work correctly with frame-based subtitles.

2010-09-05  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Define the default value of the framerate from the player.

2010-09-02  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Add the capability to return the framerate of the video.

2010-09-01  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/errorchecking.h:
	* src/style.cc:
	* src/style.h:
	* src/subtitletime.cc:
	* src/subtitletime.h: